[FIX][UI] Bad color contrast on dropdown-item text-danger.

--- a/themes/fivealive/scss/_tiki-selectors.scss
+++ b/themes/fivealive/scss/_tiki-selectors.scss
@@ -6,9 +6,16 @@ $imagePath: "../images/";
 //	background-image: url('#{$imagePath}bg.jpg');
 // }
 
-.dropdown-item .text-danger {
-  color: #fec0bd !important;
+.dropdown-item.btn-link.text-danger {
+	background: lighten($danger, 40%) !important; //lighten($danger, 70%);
+	border-radius: 0 !important;
+	&:hover {
+		background: lighten($danger, 30%) !important;
+	}
 }
+//.dropdown-item.text-danger {
+//  color: #fec0bd !important;
+//}
 
 html {  background-color: #414141; }
 
